Update swagger for alarm_action & alarm_policy
- Update Swagger description parts
- Modify some minor things (include bugs)
